Chenged mapping type of usser in Order, methods of create empty List in ShoppingCartServiceImpl.clear().